# callback-bug

./: Cargo.toml  README.md  git-bugreport-2021-12-24-1607.txt
src/: main.rs
ui/: appwindow.60
