[package]
name = "callback-bug"
version = "0.1.0"
authors = ["Frederick <frederick@vollbrecht.cc>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sixtyfps = "0.1"
plotters = "0.3"
once_cell = "1.9.0"

[build-dependencies]
sixtyfps-build = "0.1"
